--- a/NutrientScraper/design/index.html
+++ b/NutrientScraper/design/index.html
@@ -8,6 +8,10 @@
     <script src="./foodsearch.js" type="text/javascript"></script>
   </head>
   <body>
+    <aside class="SignIn">
+      <a href=''>Sign in</a> /
+      <a href=''>Sign up</a>
+    </aside>
     <header class='headclass'>
       <h1>H-E-B Food Nutrition</h1>
       <ul class='headerlist'>
@@ -170,8 +174,8 @@
         </tbody>
     </table>
     <footer>
-      <h3>Footer</h3>
-      <ul class='footerlist'><li><a href=''>Mike Dey</a></li><ul>
+      <h3>About Me</h3>
+        <a href='https://www.linkedin.com/in/deymichael/'>Michael Dey</a>
     </footer>
   </body>
 </html>
